[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VocabMaster"
version = "0.2.0"
description = "Master new languages with this CLI tool, designed to help you record vocabulary and create Anki flashcards without the need to manually input translations or example sentences."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sébastien De Revière"}
]
keywords = ["vocabulary", "language-learning", "anki", "flashcards", "cli", "openai", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]

dependencies = [
    "click ~= 8.3",
    "httpx>=0.28.1",
    "openai >= 1.66.0, <2.0",
    "tiktoken ~= 0.12",
    "urllib3 >= 2.6.3",
]

[project.scripts]
vocabmaster = "vocabmaster.cli:vocabmaster"

[dependency-groups]
dev = [
    "pytest ~= 8.4",
    "scriv[toml]>=1.5.0",
    "urllib3>=2.6.3",  # urllib3 is a transitive dependency of scriv (via requests). Pinned to fix CVE-2026-21441.
]

[project.urls]
Homepage = "https://github.com/sderev/vocabmaster"
Repository = "https://github.com/sderev/vocabmaster"
Issues = "https://github.com/sderev/vocabmaster/issues"

[tool.setuptools]
packages = ["vocabmaster"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I001"]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"
md_header_level = 2
output_file = "CHANGELOG.md"
fragment_directory = "changelog.d"
new_fragment_template = "file: changelog.d/templates/fragment.md.j2"
categories = [
    "Added",
    "Changed",
    "Deprecated",
    "Removed",
    "Fixed",
    "Security",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
